# tldevel

./: .dir-locals.el  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README.md  README.org  VERSION  alignedvec_alloc.c  alignedvec_alloc.h  autogen.sh  ax_with_htslib.m4  ax_with_tldevel.m4  config.h  configure.ac  configure.ac_old  copy_into_project.sh  env_settings.in  hash_table.c  hash_table.h  htsglue.c  htsglue.h  khash.h  ksa.h  kstring.c  makeTAGS.sh  mem.h  mem_itest.c  minhash.c  minhash.h  pwrite.c  pwrite.h  pwrite_test.sh  rb.c  rb.h  rb_itest.c  rbtree.c  rbtree.h  rng.c  (+44 more)
.github/workflows/: ccpp.yml
dev/: .dir-locals.el  CMakeLists.txt  Makefile.am  demo.c  eslStopWatchTest.c  khash_test.c  ksa_test.c  kstring_test.c  tlalloc_test.c  tlalphabet_test.c  tldevel_test.c  tlhdf5wrap_test.c  tllogsum_test.c  tlminhash_test.c  tlmisc_test.c  tlrng_test.c  tlseqio_test.c
helper/: Makefile.am  reformat_setting.c
include/: Config.h.in  ksa.h  tlalloc.h  tlalphabet.h  tldevel.h  tlhdf5wrap.h  tlhdf5wrap_types.h  tlmisc.h  tlrng.h  tlrng_hdf5.h  tlseqbuffer.h  tlseqio.h
lib/: Makefile.am  tldevel.h
lib/dev/: Makefile.am
lib_tldevel/: Makefile.am  README.org  configure.ac  tlseqio.c  tlseqio.h  trb_itest.c  trd_itest.c
lib_tldevel/dev/: .dir-locals.el  Makefile.am  tlseqio_test.c
m4/: ax_set_compile_flags.m4  ax_with_htslib.m4  set_compile_flags.m4
src/: CMakeLists.txt  esl_stopwatch.c  ksa.c  tlalloc.c  tlalphabet.c  tlbitvec.c  tldevel.c  tldevel.h  tlhdf5wrap.c  tllogsum.c  tlmisc.c  tlrng.c  tlrng_hdf5.c  tlrng_struct.h  tlseqbuffer.c  tlseqio.c
